# DeskMuteOverlay

./: .gitignore  CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.h  MemberWidget.cpp  MemberWidget.h  OverlayWindow.cpp  OverlayWindow.h  README.md  main.cpp
include/: AnimatedIconWidget.h  AppController.h  BindButton.h  ConfigWindow.h  DiscordClient.h  MemberWidget.h  OverlayWindow.h  ScrollEater.h
resources/: resources.qrc  style.qss
src/: AnimatedIconWidget.cpp  AppController.cpp  BindButton.cpp  ConfigWindow.cpp  DiscordClient.cpp  MemberWidget.cpp  OverlayWindow.cpp  ScrollEater.cpp  main.cpp
vencord/: index.ts  native.ts
